refactor: remove current-theme from kitty and only use moonlight

--- a/configs/kitty/moonlight.conf
+++ b/configs/kitty/moonlight.conf
@@ -8,6 +8,7 @@
 
 foreground                      #e4f3fa
 background                      #212337
+background_opacity              0.9
 selection_foreground            #e4f3fa
 selection_background            #403c64
 
