--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -1,3 +1,21 @@
 # BEGIN_KITTY_THEME
 include moonlight.conf
 # END_KITTY_THEME%   
+
+# BEGIN_KITTY_FONTS
+font_family      family="FiraCode Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
+
+# BEGIN KITTY_CONFIG
+background_tint         0.97
+window_padding_width   4
+window_border_width     1pt
+active_border_color     #2df4c0
+window_margin_width     4
+enabled_layouts Tall, *
+map f1 new_window_with_cwd
+map f2 launch --cwd=current code .
+# END KITTY_CONFIG
