--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -16,9 +16,9 @@ window_border_width     1pt
 active_border_color     #2df4c0
 window_margin_width     4
 enabled_layouts Tall, *
-remember_window_size   no
-initial_window_width   1200
-initial_window_height  800
+remember_window_size   yes
+initial_window_width   800
+initial_window_height  600
 map f1 new_window_with_cwd
 map f2 launch --cwd=current code .
 # END KITTY_CONFIG
